--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "version": "1.0.0",
   "type": "module",
   "description": "An API to control the schduler of a vaccination campaign",
-  "main": "index.js",
+  "main": "src/index.js",
+  "scripts": {
+    "dev": "nodemon src/index.js",
+    "start": "node src/index.js"
+  },
   "repository": "https://github.com/YuriRoque/vaccine-api.git",
   "author": "Yuri Roque Benvenutti",
   "license": "MIT",
